ChangeLog

Name: William Lai
Date: 02-28-2013
Description: Made minor changes and added new class StandardChessGame.
Changes:
     * StandardChessGame.java: Created class and wrote stub skeleton
     * Board.java: Added isLegalSquare helper function, implemented getPiece function with bounds checking, removed inCheck function.
     * Game.java: Renamed isLegal function to isLegalMove

Name: William Lai
Date: 02-19-2013
Description: Implemented all of the moves functions in each class and added helper functions that made them easier to implement.
Changes:
     * Piece.java: Added some helper functions
     * Queen.java: Finished implementing moves function
     * King.java: Implemented moves function
     * Bishop.java: Implemented moves function
     * Knight.java: Implemented moves function
     * Rook.java: Implemented moves function
     * Board.java: Added static helper function isLegal

Name: William Lai
Date: 02-14-2013
Description: Made some changes and additions
Changes:
     * Piece.java: Added setPos function
     * Pawn.java: Implemented moves function
     * Queen.java: Partially implemented moves function
     * Board.java: Implemented some functions
     * Move.java: Changed variable names

Name: William Lai
Date: 02-14-2013
Description: Initial interface of critical classes and files were created. Most complex functions are stubs and some classes and definitions have not been created yet.
Changes:
     * Piece.java: Created abstract class Piece
     * Pawn.java: Created Piece subclass Pawn
     * Knight.java: Created Piece subclass Knight
     * Bishop.java: Created Piece subclass Bishop
     * Rook.java: Created Piece subclass Rook
     * Queen.java: Created Piece subclass Queen
     * King.java: Created Piece subclass King
     * Board.java: Created class Board
     * Game.java: Created abstract class Game
     * Player.java: Created abstract class Player
     * Move.java: Created helper class Move